fixed jumbotron alignment across all devices

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,10 +6,16 @@ body {
     margin-right: 5vw;
 }
 .jumbotron {
+    margin: 0;
+    padding: 0;
+    background-color: #999999;
+}
+.container-fluid {
     background: url(../IMG/background.jpg);
     background-size: cover;
     margin-left: 1.2vw;
     padding-bottom: 0;
+    padding-top: 3vh;
     height: 80vh;
     width: 90vw;
     border-radius: 0;
